--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,9 +25,7 @@ layout: default
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       {%- for post in posts -%}
       <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        " - "
-        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+        <span class="post-meta">{{ post.date | date: date_format }}</span> - <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a> 
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
