--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -217,9 +217,9 @@
   margin-left: 0;
   list-style: none;
 
-  > li {
-    margin-bottom: $spacing-unit;
-  }
+  //> li {
+  //  margin-bottom: $spacing-unit;
+  //}
 }
 
 .post-meta {
@@ -228,8 +228,8 @@
 }
 
 .post-link {
-  display: block;
-  @include relative-font-size(1.5);
+  //display: block;
+  //@include relative-font-size(1.5);
 }
 
 
