--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -66,7 +66,9 @@ main {
 img {
   max-width: 100%;
   vertical-align: middle;
-  text-align: center;
+  margin-right: auto;
+  margin-left: auto;
+  display: block;
 }
 
 
