--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -1,2 +1,108 @@
 // Placeholder to allow defining custom styles that override everything else.
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
+
+@font-face {
+    font-family: 'IBMVGA8';
+    src: url(./fonts/PxPlus_IBM_VGA8.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+body {        
+    background-color: black;
+}
+
+html, body, footer {
+    /* Oldschool font (IBM VGA8) */
+    font-family: IBMVGA8, monospace;
+    font-size: 16px;
+    color: #999;
+    
+    -webkit-text-size-adjust: none;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: none;
+    text-size-adjust: none;
+}
+
+a {
+    color: /*#00FF00*/ /*#5ff*/ #0aa;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #ff5;
+}
+
+hr {
+	padding: 0;
+	margin: 7px 0 8px 0;
+	height:1px;
+	background-color: #333;
+	border-width:0;
+}
+
+h3 {
+    font-size: 16px;
+    font-weight: normal;
+    color: /*#5f5*/ #0a0; /* Green */
+}
+
+/* Code, Text area */
+
+pre, textarea {
+    display: block;
+    padding: 9.5px;
+    margin: 0 0 10px;
+    
+    font-size: 13px;
+
+    word-break: break-all;
+    word-wrap: break-word;
+    
+    /*
+    background-color: #f5f5f5;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+    color: #333;
+    */
+    
+    background-color: /*#181818*/ #0C0C0C;
+    color: /*#fff*/ #717171;
+    
+    /* New line when the line length is superior to the pre width */
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+}
+
+button, input {
+    font-family: IBMVGA8, monospace;
+    font-size: 16px;
+    color: #999;    
+    text-align: center;
+    
+    background-color: black; /* Force background color */
+    
+    border-width: 1px;
+    border-style: solid;
+    border-color: #333;
+    
+    padding: 10px;
+    margin: 10px;
+}
+
+button:hover {    
+    border-width: 1px;
+    border-style: solid;
+    border-color: white;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background: black;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #181818;
+}
