--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,26 +4,20 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
+    <a class="class="post-title p-name" href="{{ page.url | relative_url }}">{{ page.title | escape }}</a>
     <p class="post-meta">
+      Posted by <a class="p-author h-card" itemprop="name" href="">
+      {%- if page.author -%}
+      {{ author }}
+      {%- else -%}
+      Unknown
+      {%- endif -%}
+      </a> on 
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       <time class="dt-published" datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
         {{ page.date | date: date_format }}
       </time>
-      {%- if page.modified_date -%}
-        ~ 
-        {%- assign mdate = page.modified_date | date_to_xmlschema -%}
-        <time class="dt-modified" datetime="{{ mdate }}" itemprop="dateModified">
-          {{ mdate | date: date_format }}
-        </time>
-      {%- endif -%}
-      {%- if page.author -%}
-        • {% for author in page.author %}
-          <span itemprop="author" itemscope itemtype="http://schema.org/Person">
-            <span class="p-author h-card" itemprop="name">{{ author }}</span></span>
-            {%- if forloop.last == false %}, {% endif -%}
-        {% endfor %}
-      {%- endif -%}</p>
+    </p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
