--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-    <a class="class="post-title p-name" href="{{ page.url | relative_url }}">{{ page.title | escape }}</a>
+    <a class="post-title p-name" href="{{ page.url | relative_url }}">{{ page.title | escape }}</a>
     <p class="post-meta">
       Posted by <a class="p-author h-card" itemprop="name" href="">
       {%- if page.author -%}
