--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -41,11 +41,11 @@ a:visited {
 }
 
 hr {
-	padding: 0;
-	margin: 7px 0 8px 0;
-	height:1px;
-	background-color: #333;
-	border-width:0;
+    padding: 0;
+    margin: 7px 0 8px 0;
+    height: 1px;
+    background-color: #333;
+    border-width: 0;
 }
 
 h3 {
@@ -118,15 +118,13 @@ button:hover {
 
 .post-meta {
     font-size: inherit;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
 .post-title, .post-content h1 {
     font-size: inherit;
     letter-spacing: inherit;
-}
-
-.post-title {
-    border-bottom: 1px solid #333;
 }
 
 .post-content h3 {
