Update style and posts display

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,18 @@ layout: default
       {%- assign date_format = site.minima.date_format | default: "%Y-%m-%d" -%}
       {%- for post in posts -%}
       <li>
-        <span class="post-meta">{{ post.date | date: date_format }}</span> &raquo; <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a> 
+        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+        
+        {% capture number %}{{ post.title | size }}{% endcapture %}
+        {% assign max_separators = 64 %}
+        {% number = max_separators - number %}
+        <span class="file-separator">
+        {%- for i in (1..number) -%}
+        _
+        {%- endfor -%}
+        </span>
+        
+        <span class="post-meta">{{ post.date | date: date_format }}</span>
         {%- if site.show_excerpts -%}
           {{ post.excerpt }}
         {%- endif -%}
