--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -2,19 +2,11 @@
 // (Use `_sass/minima/custom-variables.scss` to override variable defaults)
 
 
-// @font-face {
-//    font-family: 'IBMVGA8';
-//    src: url(./fonts/PxPlus_IBM_VGA8.ttf) format('truetype');
-//    font-weight: normal;
-//    font-style: normal;
-//}
-
-
 @font-face {
-  font-family: 'IBM VGA 8x16';
-  src: url(./fonts/WebPlus_IBM_VGA_8x16.woff) format('woff');
-  font-weight: normal;
-  font-style: normal;
+    font-family: 'IBMVGA8';
+    src: url(./fonts/PxPlus_IBM_VGA8.ttf) format('truetype');
+    font-weight: normal;
+    font-style: normal;
 }
 
 body {        
@@ -22,7 +14,7 @@ body {
 }
 
 html, body, footer {
-    font-family: 'IBM VGA 8x16', monospace;
+    font-family: IBMVGA8, monospace;
     font-size: 16px;
     color: #999;
     
