--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -27,6 +27,9 @@ layout: default
       <li>
         <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
         
+        post.title.size = {{ post.title | size }}
+        post.title.size = {{ post.title.size }}
+        
         {% assign max_separators = 50 %}
         {% assign number = max_separators - post.title.size %}
         <span class="file-separator">
