--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -101,12 +101,10 @@ button:hover {
     border-color: white;
 }
 
-li {
-    margin-bottom: 3px;
-}
-
 table td {
     border: 0px;
+    background-color: black;
+    margin-bottom: 3px;
 }
 
 table th, table td {
