--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -101,6 +101,10 @@ button:hover {
     border-color: white;
 }
 
+table {
+    border: 0px;
+}
+
 table td {
     border: 0px;
     background-color: black;
