Fix author name display and modify syntax highlighting

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: default
     <p class="post-meta">
       Posted by <a class="p-author h-card" itemprop="name" href="">
       {%- if page.author -%}
-      {{ author }}
+      {{ page.author }}
       {%- else -%}
       Unknown
       {%- endif -%}
