--- a/_sass/minima/skins/dark.scss
+++ b/_sass/minima/skins/dark.scss
@@ -68,7 +68,7 @@ $table-border-color:    $border-color-01 !default;
   .ne    { color: #900; font-weight: bold } // Name.Exception
   .nf    { color: #82AAFF; font-weight: bold } // Name.Function
   .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #FFCB6B } // Name.Tag
+  .nt    { color: #EEFFFF } // Name.Tag
   .nv    { color: #EEFFFF } // Name.Variable
   .ow    { font-weight: bold } // Operator.Word
   .w     { color: #EEFFFF } // Text.Whitespace
