--- a/_sass/minima/skins/classic.scss
+++ b/_sass/minima/skins/classic.scss
@@ -55,7 +55,7 @@ $table-border-color:    $border-color-01 !default;
   .kr    { font-weight: bold } // Keyword.Reserved
   .kt    { color: #458; font-weight: bold } // Keyword.Type
   .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
+  .s     { color: #b99c47 } // Literal.String
   .na    { color: #008080 } // Name.Attribute
   .nb    { color: #0086B3 } // Name.Builtin
   .nc    { color: #458; font-weight: bold } // Name.Class
@@ -72,16 +72,16 @@ $table-border-color:    $border-color-01 !default;
   .mh    { color: #099 } // Literal.Number.Hex
   .mi    { color: #099 } // Literal.Number.Integer
   .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #d14 } // Literal.String.Backtick
-  .sc    { color: #d14 } // Literal.String.Char
-  .sd    { color: #d14 } // Literal.String.Doc
-  .s2    { color: #d14 } // Literal.String.Double
-  .se    { color: #d14 } // Literal.String.Escape
-  .sh    { color: #d14 } // Literal.String.Heredoc
-  .si    { color: #d14 } // Literal.String.Interpol
-  .sx    { color: #d14 } // Literal.String.Other
+  .sb    { color: #b99c47 } // Literal.String.Backtick
+  .sc    { color: #b99c47 } // Literal.String.Char
+  .sd    { color: #b99c47 } // Literal.String.Doc
+  .s2    { color: #b99c47 } // Literal.String.Double
+  .se    { color: #b99c47 } // Literal.String.Escape
+  .sh    { color: #b99c47 } // Literal.String.Heredoc
+  .si    { color: #b99c47 } // Literal.String.Interpol
+  .sx    { color: #b99c47 } // Literal.String.Other
   .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #d14 } // Literal.String.Single
+  .s1    { color: #b99c47 } // Literal.String.Single
   .ss    { color: #990073 } // Literal.String.Symbol
   .bp    { color: #999 } // Name.Builtin.Pseudo
   .vc    { color: #008080 } // Name.Variable.Class
