Add lightbox plugin

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,3 +35,6 @@
   </div>
 
 </footer>
+
+<script type="text/javascript" src="{{ site.baseurl }}/plugins/lightbox/lightbox.js"></script>
+<link rel="stylesheet" href="{{ site.baseurl }}/plugins/lightbox/lightbox.css">
