--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -79,6 +79,13 @@ code {
     padding: 0px;
 }
 
+blockquote {
+    color: #717171;
+    font-size: inherit;
+    font-style: inherit;
+    background-color: #0C0C0C;
+}
+
 button, input {
     font-family: IBMVGA8, monospace;
     font-size: 16px;
