--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -244,6 +244,10 @@ table th, table td {
     font-size: 16px;
 }
 
+.tipue_search_content_title a {
+    color: var(--blue-color);
+}
+
 .tipue_search_content_text {
     font-family: var(--base-font);
     color: var(--gray-color);
