Fix menu background and add Youtube channel

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -158,6 +158,11 @@ table th, table td {
 	color: var(--blue-color);
 }
 
+.site-nav {
+    background-color: var(--black-light-color);
+    border: 0px;
+}
+
 .site-nav .page-link {
     color: var(--blue-color);
 }
