Change home page and move articles in blog section

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,68 +3,7 @@ layout: default
 ---
 
 <div class="home">
-  {%- if page.title -%}
-    <h1 class="page-heading">{{ page.title }}</h1>
-  {%- endif -%}
-
-  {{ content }}
-
-
-  {% if site.paginate %}
-    {% assign posts = paginator.posts %}
-  {% else %}
-    {% assign posts = site.posts %}
-  {% endif %}
-
-
-  {%- if posts.size > 0 -%}
-    {%- if page.list_title -%}
-      <h2 class="post-list-heading">{{ page.list_title }}</h2>
-    {%- endif -%}
-    <table class="post-list">
-    <tbody>
-      
-      {%- assign date_format = site.minima.date_format | default: "%Y-%m-%d" -%}
-      {%- for post in posts -%}
-      <tr>
-      <td>
-        <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
-        
-        {% assign max_separators = 72 %}
-        {% assign number = max_separators | minus: post.title.size %}
-        <span class="file-separator">
-        {%- for i in (1..number) -%}
-        _
-        {%- endfor -%}
-        </span>
-      </td>
-      
-      <td>
-        <span class="post-meta">{{ post.date | date: date_format }}</span>
-        {%- if site.show_excerpts -%}
-          {{ post.excerpt }}
-        {%- endif -%}
-      </td>
-      </tr>
-      {%- endfor -%}
-    
-    </tbody>
-    </table>
-
-    {% if site.paginate %}
-      <div class="pager">
-        <ul class="pagination">
-        {%- if paginator.previous_page %}
-          <li><a href="{{ paginator.previous_page_path | relative_url }}" class="previous-page">{{ paginator.previous_page }}</a></li>
-        {%- endif %}
-          <li><div class="current-page">{{ paginator.page }}</div></li>
-        {%- if paginator.next_page %}
-          <li><a href="{{ paginator.next_page_path | relative_url }}" class="next-page">{{ paginator.next_page }}</a></li>
-        {%- endif %}
-        </ul>
-      </div>
-    {%- endif %}
-
-  {%- endif -%}
-
+  <form action=http://www.google.fr/search name=f>
+    <input class="search-input" maxlength=2048 name=q value="" title="Google" autocomplete="off" placeholder="Lycos, go get it !" autofocus>
+</form>
 </div>
