--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,9 +1,4 @@
 ---
-layout: default
+layout: blog
 ---
 
-<div class="home">
-  <form action=http://www.google.fr/search name=f>
-    <input class="search-input" maxlength=2048 name=q value="" title="Google" autocomplete="off" placeholder="Lycos, go get it !" autofocus>
-</form>
-</div>
