--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,6 +22,8 @@
             {%- assign my_page = site.pages | where: "path", path | first -%}
             {%- if my_page.title -%}
             <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
+            {%- elsif my_page.external_link -%}
+            <a class="page-link" href="{{ my_page.external_link }}">{{ my_page.title | escape }}</a>
             {%- endif -%}
           {%- endfor -%}
         </div>
