--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -226,6 +226,11 @@ table th, table td {
     color: #333;
 }
 
+.wrapper-header {
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
 .home {
     padding-top: 30%;
 }
