--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -283,3 +283,52 @@ table th, table td {
     font-family: var(--base-font);
     color: var(--orange-color);
 }
+
+/* Navbar - General */
+
+#navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    float: center;
+}
+
+#navbar li {
+    float: left; /* Keep them aligned with the following order: Home, Blog, ...*/
+}
+
+#navbar li a {
+    display: inline-block;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Navbar - Dropdown menu */
+
+#navbar .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: var(--black-light-color);
+}
+
+#navbar .dropdown-content a {
+    padding: 0px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+#navbar .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+#navbar .dropdown-header {
+    display: block;
+    padding: 0px 10px;
+}
+
+#navbar .li-right {
+    float: right; /* Move Links and Files on the right side of the screen */
+}
