--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,47 +1,49 @@
 <header class="site-header">
   <div class="wrapper-header">
-        <nav class="site-nav">
-          <ul>
-            <li><a class="site-title" rel="author" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></li>
-            <li><a href="{{ "/" | relative_url }}">{{ site.title | escape }}</a></li>
-            <li><a href="/blog/">Blog</a></li>
-            <li><a href="https://outlook.live.com">Mailbox</a></li>
-            <li><a href="https://github.com/remidebord">Github</a></li>
-            <li><a href="http://mywawa.free.fr">Archive</a></li>
-            <li class="dropdown">
-                <a href="#">Utils</a>
-                <div class="dropdown-content">
-                <p class="dropdown-header">Dev</p>
-                  <a href="https://elixir.bootlin.com/linux/v5.14.21/source">Bootlin's Elixir</a>
-                  <a href="https://godbolt.org/">Compiler Explorer</a>
-                  <a href="https://lospec.com/pixel-art-scaler/">Pixel Art scaler</a>
-                  <a href="https://ideogram.ai/">Ideogram</a>
-                  <a href="https://digipdf.app/">DigiPDF</a>
-                </div>
+    <nav class="site-nav">
+      <ul>
+        <li><a class="site-title" rel="author" href="http://blog.remidebord.fr/">Rémi Debord</a></li>
+        <li><a href="http://blog.remidebord.fr/">Home</a></li>
+        <li><a href="/blog/">Blog</a></li>
+        <li><a href="https://outlook.live.com">Mailbox</a></li>
+        <li><a href="https://github.com/remidebord">Github</a></li>
+        <li><a href="http://mywawa.free.fr">Archive</a></li>
+        <li class="dropdown">
+          <a href="#">Utils</a>
+          <div class="dropdown-content">
+            <p class="dropdown-header">Dev</p>
+              <a href="https://elixir.bootlin.com/linux/v6.3.10/source">Bootlin's Elixir</a>
+              <a href="https://godbolt.org/">Compiler Explorer</a>
+              <a href="https://lospec.com/pixel-art-scaler/">Pixel Art scaler</a>
+              <a href="https://ideogram.ai/">Ideogram</a>
+              <a href="https://digipdf.app/">DigiPDF</a>
+          </div>
+        </li>
+        <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
+        <li><a href="https://www.youtube.com/@remidebord9237/playlists">Radio</a></li>
+        <li><a href="/files/">Files</a></li>
+        <li class="dropdown li-right">
+            <li><a href="/links/">Links</a></li>
+              <div class="dropdown-content">
+                <p class="dropdown-header">Libre</p>
+                  <a href="https://lwn.net/">LWN.net</a>
+                  <a href="https://linuxfr.org/">LinuxFR.org</a>
+                  <a href="https://kernelnewbies.org/">Kernel Newbies</a>
+					      <p class="dropdown-header">Web3</p>
+					        <a href="https://web3isgoinggreat.com/">Is Going Great</a>
+                <p class="dropdown-header">Electronic</p>
+                  <a href="http://gizmodo.com/">Gizmodo</a>
+                  <a href="http://hackaday.com/">Hack a day</a>
+                  <a href="http://www.electronics-lab.com/blog/">Electronics-Lab</a>
+                  <a href="http://dangerousprototypes.com/blog/">Dangerous Prot.</a>
+                <p class="dropdown-header">Mountaineering</p>
+                  <a href="https://fatmap.com/adventures/@42.8103648,0.9769227,12767.1754113,-31.2365567,142.8287158,1642.5304259,satellite">FATMAP</a>
+                  <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
+              </div>
             </li>
-            <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
-            <li><a rel="me" href="https://www.youtube.com/channel/{{ social.youtube_channel | cgi_escape | escape }}">Radio</a></li>
-            <li><a href="/files/">Files</a></li>
-            <li class="dropdown li-right">
-              <li><a href="/links/">Links</a></li>
-                <div class="dropdown-content">
-                    <p class="dropdown-header">Libre</p>
-                      <a href="https://lwn.net/">LWN.net</a>
-                      <a href="https://linuxfr.org/">LinuxFR.org</a>
-                      <a href="https://kernelnewbies.org/">Kernel Newbies</a>
-					          <p class="dropdown-header">Web3</p>
-					            <a href="https://web3isgoinggreat.com/">Is Going Great</a>
-                    <p class="dropdown-header">Electronic</p>
-                      <a href="http://gizmodo.com/">Gizmodo</a>
-                      <a href="http://hackaday.com/">Hack a day</a>
-                      <a href="http://www.electronics-lab.com/blog/">Electronics-Lab</a>
-                      <a href="http://dangerousprototypes.com/blog/">Dangerous Prot.</a>
-                    <p class="dropdown-header">Mountaineering</p>
-                      <a href="https://fatmap.com/adventures/@42.8103648,0.9769227,12767.1754113,-31.2365567,142.8287158,1642.5304259,satellite">FATMAP</a>
-                      <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
-                </div>
-            </li>
-          </ul>
-        </nav>
+          </li>
+        </li>
+      </ul>
+    </nav>
   </div>
 </header>
