--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="wrapper-header">
-    <nav class="site-nav">
+    <nav id="navbar">
       <ul>
         <li><a class="site-title" rel="author" href="http://blog.remidebord.fr/">Rémi Debord</a></li>
         <li><a href="http://blog.remidebord.fr/">Home</a></li>
