Fix dropdown and links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,25 +23,23 @@
         <li><a href="https://www.youtube.com/@remidebord9237/playlists">Radio</a></li>
         <li><a href="/files/">Files</a></li>
         <li class="dropdown li-right">
-            <li><a href="/links/">Links</a></li>
-              <div class="dropdown-content">
-                <p class="dropdown-header">Libre</p>
-                  <a href="https://lwn.net/">LWN.net</a>
-                  <a href="https://linuxfr.org/">LinuxFR.org</a>
-                  <a href="https://kernelnewbies.org/">Kernel Newbies</a>
-					      <p class="dropdown-header">Web3</p>
-					        <a href="https://web3isgoinggreat.com/">Is Going Great</a>
-                <p class="dropdown-header">Electronic</p>
-                  <a href="http://gizmodo.com/">Gizmodo</a>
-                  <a href="http://hackaday.com/">Hack a day</a>
-                  <a href="http://www.electronics-lab.com/blog/">Electronics-Lab</a>
-                  <a href="http://dangerousprototypes.com/blog/">Dangerous Prot.</a>
-                <p class="dropdown-header">Mountaineering</p>
-                  <a href="https://fatmap.com/adventures/@42.8103648,0.9769227,12767.1754113,-31.2365567,142.8287158,1642.5304259,satellite">FATMAP</a>
-                  <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
-              </div>
-            </li>
-          </li>
+          <a href="/links/">Links</a>
+          <div class="dropdown-content">
+            <p class="dropdown-header">Libre</p>
+              <a href="https://lwn.net/">LWN.net</a>
+              <a href="https://linuxfr.org/">LinuxFR.org</a>
+              <a href="https://kernelnewbies.org/">Kernel Newbies</a>
+            <p class="dropdown-header">Web3</p>
+              <a href="https://web3isgoinggreat.com/">Is Going Great</a>
+            <p class="dropdown-header">Electronic</p>
+              <a href="http://gizmodo.com/">Gizmodo</a>
+              <a href="http://hackaday.com/">Hack a day</a>
+              <a href="http://www.electronics-lab.com/blog/">Electronics-Lab</a>
+              <a href="http://dangerousprototypes.com/blog/">Dangerous Prot.</a>
+            <p class="dropdown-header">Mountaineering</p>
+              <a href="https://fatmap.com/adventures/@42.8103648,0.9769227,12767.1754113,-31.2365567,142.8287158,1642.5304259,satellite">FATMAP</a>
+              <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
+          </div>
         </li>
       </ul>
     </nav>
