--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,6 @@
         </li>
         <li><a href="https://coinmarketcap.com/fr/">Crypto</a></li>
         <li><a href="https://www.youtube.com/@remidebord9237/playlists">Radio</a></li>
-        <li><a href="/files/">Files</a></li>
         <li class="dropdown li-right">
           <a href="/links/">Links</a>
           <div class="dropdown-content">
@@ -41,6 +40,7 @@
               <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
           </div>
         </li>
+        <li><a class="li-right" href="/files/">Files</a></li>
       </ul>
     </nav>
   </div>
