Remove unused links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -41,6 +41,7 @@
           </div>
         </li>
         <li><a class="li-right" href="/files/">Files</a></li>
+        <li><a class="li-right" href="/search/">Search</a></li>
       </ul>
     </nav>
   </div>
