Fix right align

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -40,8 +40,8 @@
               <a href="https://www.topopyrenees.com/">Topo Pyrénées</a>
           </div>
         </li>
-        <li><a class="li-right" href="/files/">Files</a></li>
-        <li><a class="li-right" href="/search/">Search</a></li>
+        <li class="li-right"><a href="/files/">Files</a></li>
+        <li class="li-right"><a href="/search/">Search</a></li>
       </ul>
     </nav>
   </div>
